--- a/SGA/LOGIN/templates/LOGIN_SGA.html
+++ b/SGA/LOGIN/templates/LOGIN_SGA.html
@@ -1,81 +1,87 @@
 <!DOCTYPE html>
-<html>
-   <head>
-      <title>Proyecto de Auditoría</title>
-      <style>
-         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-         }
-         header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-         }
-         header h1 {
-            margin: 0;
-            font-size: 2rem;
-         }
-         header label {
-            display: block;
-            margin-top: 20px;
-            font-size: 1.2rem;
-            font-weight: bold;
-         }
-         header input[type="text"], header input[type="password"], header input[type="number"] {
-            width: 100%;
-            padding: 10px;
-            margin-top: 5px;
-            margin-bottom: 10px;
-         }
-         main {
-            padding: 20px;
-         }
-         footer {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-         }
-         footer p {
-            margin: 0;
-            font-size: 0.8rem;
-         }
-      </style>
-   </head>
-   <body>
-      <header>
-         <h1>Proyecto de Auditoría</h1>
-         <form style="display: flex; justify-content: center; align-items: center;">
-            <div style="display: flex; flex-direction: column; margin: 0 20px;">
-               <label for="username">USUARIO:</label>
-               <input type="text" id="username" name="username">
+<html lang="en-us" dir="ltr">
+<head>
+    <title>Log in - Django site admin</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'admin/css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'admin/css/dark_mode.css' %}">
+    <script src="{% static 'admin/js/theme.js' %}" defer></script>
+    <link rel="stylesheet" href="{% static 'admin/css/nav_sidebar.css' %}">
+    <script src="{% static 'admin/js/nav_sidebar.js' %}" defer></script>
+    <link rel="stylesheet" href="{% static 'admin/css/login.css' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'admin/css/responsive.css' %}">
+    <meta name="robots" content="NONE,NOARCHIVE">
+</head>
+<body class="login" data-admin-utc-offset="0">
+    <a href="#content-start" class="skip-to-content-link">Skip to main content</a>
+    <!-- Container -->
+    <div id="container">
+        <!-- Header -->
+        <header id="header">
+            <div id="branding">
+                <div id="site-name">LOGIN SGA</a></div>
+                <button class="theme-toggle">
+                    <div class="visually-hidden theme-label-when-auto">Toggle theme (current theme auto)</div>
+                    <div class="visually-hidden theme-label-when-light">Toggle theme (current theme light)</div>
+                    <div class="visually-hidden theme-label-when-dark">Toggle theme (current theme dark)</div>
+                    <svg aria-hidden="true" class="theme-icon-when-auto">
+                        <use xlink:href="#icon-auto"></use>
+                    </svg>
+                    <svg aria-hidden="true" class="theme-icon-when-dark">
+                        <use xlink:href="#icon-moon"></use>
+                    </svg>
+                    <svg aria-hidden="true" class="theme-icon-when-light">
+                        <use xlink:href="#icon-sun"></use>
+                    </svg>
+                </button>
             </div>
-            <div style="display: flex; flex-direction: column; margin: 0 20px;">
-               <label for="password">CONTRASEÑA:</label>
-               <input type="password" id="password" name="password">
-            </div>            
-         </form>
-		 
-      </header>
-      <main>
-		<div style="display: flex; flex-direction: column; margin: 0 20px;">
-               <label for="id">Consultar Auditoria por ID:</label>
-               <input type="number" id="id" name="id">
+        </header>
+        <!-- END Header -->
+        <div class="main" id="main">
+            <main id="content-start" class="content" tabindex="-1">
+                <!-- Content -->
+                <div id="content" class="colM">
+                    <div id="content-main">
+                        <form action="admin/login/?next=/admin/" method="post" id="login-form">
+                            <input type="hidden" name="csrfmiddlewaretoken" value="EfSZTcTvXEHEs6SIMNiM95jrgO1VswHGWVmY4wS46JXicF0FLoctLXLF9I3sbA9H">
+                            <div class="form-row">
+                                <label for="id_username" class="required">Username</label>
+                                <input type="text" name="username" autofocus autocapitalize="none" autocomplete="username" maxlength="150" required id="id_username">
+                            </div>
+                            <div class="form-row">
+                                <label for="id_password" class="required">Password</label>
+                                <input type="password" name="password" autocomplete="current-password" required id="id_password">
+                                <input type="hidden" name="next" value="admin">
+                            </div>
+                            <div class="submit-row">
+                                <input type="submit" value="Entrar">
+                            </div>
+                        </form>
+                    </div>
+                    <br class="clear">
+                </div>
+                <!-- END Content -->
+                <div id="footer"></div>
+            </main>
         </div>
-		<!-- Agrega tu contenido principal aquí -->
-      </main>
-      <footer>
-         <p>&copy; 2023 Proyecto de Auditoría. Todos los derechos reservados.</p>
-      </footer>
-   </body>
+    </div>
+    <!-- END Container -->
+    <!-- SVGs -->
+    <svg xmlns="http://www.w3.org/2000/svg" class="base-svgs">
+        <symbol viewBox="0 0 24 24" width="1rem" height="1rem" id="icon-auto">
+            <path d="M0 0h24v24H0z" fill="currentColor"></path>
+            <path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2V4a8 8 0 1 0 0 16z"></path>
+        </symbol>
+        <symbol viewBox="0 0 24 24" width="1rem" height="1rem" id="icon-moon">
+            <path d="M0 0h24v24H0z" fill="currentColor"></path>
+            <path d="M10 7a7 7 0 0 0 12 4.9v.1c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2h.1A6.979 6.979 0 0 0 10 7zm-6 5a8 8 0 0 0 15.062 3.762A9 9 0 0 1 8.238 4.938 7.999 7.999 0 0 0 4 12z"></path>
+        </symbol>
+        <symbol viewBox="0 0 24 24" width="1rem" height="1rem" id="icon-sun">
+            <path d="M0 0h24v24H0z" fill="currentColor"></path>
+            <path d="M12 18a6 6 0 1 1 0-12 6 6 0 0 1 0 12zm0-2a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM11 1h2v3h-2V1zm0 19h2v3h-2v-3zM3.515 4.929l1.414-1.414L7.05 5.636 5.636 7.05 3.515 4.93zM16.95 18.364l1.414-1.414 2.121 2.121-1.414 1.414-2.121-2.121zm2.121-14.85l1.414 1.415-2.121 2.121-1.414-1.414 2.121-2.121zM5.636 16.95l1.414 1.414-2.121 2.121-1.414-1.414 2.121-2.121zM23 11v2h-3v-2h3zM4 11v2H1v-2h3z"></path>
+        </symbol>
+    </svg>
+    <!-- END SVGs -->
+</body>
 </html>
