--- a/SGA/LOGIN/templates/evualuar_actividades.html
+++ b/SGA/LOGIN/templates/evualuar_actividades.html
@@ -46,7 +46,7 @@
       <header id="header">
         <div id="branding">
         
-<div id="site-name"><a href="/admin/">Django administration</a></div>
+<div id="site-name"><a href="/admin/">SISTEMA DE GESTION DE AUDITORIA</a></div>
 
 
         </div>
