SE CREAR MODULO HOME

--- a/SGA/LOGIN/templates/agendar_auditoria.html
+++ b/SGA/LOGIN/templates/agendar_auditoria.html
@@ -86,11 +86,13 @@
     
     <!-- END Header -->
     
-      <nav aria-label="Breadcrumbs">
-        
-
-
-      </nav>
+        <!-- Breadcrumbs -->
+        <nav aria-label="Breadcrumbs">
+                <div class="breadcrumbs">
+                    <a href="/LOGIN/home/">Home</a> &rsaquo;
+                    <a href="/LOGIN/">Login</a> &rsaquo;                    
+                </div>
+            </nav>
     
     
 
