--- a/SGA/LOGIN/templates/auditoria.html
+++ b/SGA/LOGIN/templates/auditoria.html
@@ -42,7 +42,14 @@
 
     
     <!-- Header -->
-    
+      <!-- Breadcrumbs -->
+        <nav aria-label="Breadcrumbs">
+        <div class="breadcrumbs">
+            <a href="/LOGIN/home/">Home</a> &rsaquo;
+            <a href="">AUDITAR</a> &rsaquo;
+        </div>
+        </nav>
+
       <header id="header">
         <div id="branding">
         
