--- a/SGA/LOGIN/templates/crear_plantilla.html
+++ b/SGA/LOGIN/templates/crear_plantilla.html
@@ -60,7 +60,7 @@
     <!-- END Header -->
     <nav aria-label="Breadcrumbs">
         <div class="breadcrumbs">
-            <a href="/admin/">Home</a>
+            <a href="/LOGIN/home/">Home</a>
             &rsaquo; <a href="/admin/LOGIN/">Login</a>
             &rsaquo; <a href="/admin/LOGIN/plantilla/">Plantillas</a>
             &rsaquo; Add plantilla
