--- a/SGA/LOGIN/templates/crear_usuario.html
+++ b/SGA/LOGIN/templates/crear_usuario.html
@@ -54,7 +54,7 @@
         <!-- Breadcrumbs -->
         <nav aria-label="Breadcrumbs">
             <div class="breadcrumbs">
-                <a href="">Home</a> &rsaquo;
+                <a href="/LOGIN/home/">Home</a> &rsaquo;
                 <a href="/LOGIN/">Login</a> &rsaquo;
                 <a href="/admin/LOGIN/users/">Users</a> &rsaquo; Add users
             </div>
@@ -65,7 +65,7 @@
             <main id="content-start" class="content" tabindex="-1">
                 <!-- Content -->
                 <div id="content" class="colM">
-                    <h1>Crear Auditor</h1>
+                    <h1>Ver Auditores</h1>
                     <div class="form-row field-owner">
                         <div>
                             <div class="flex-container">
@@ -88,6 +88,7 @@
                         </div>
                     </div>
                     <div id="content-main">
+                        <h1>Crear Auditor</h1>
                         <form method="post" id="users_form" novalidate>
                             <input type="hidden" name="csrfmiddlewaretoken" value="kgwLh4kgsBvReY4Pz7lHfolUn9vhcEFdWi5qSYGrZTsn6YsmUwN5IqkNX7ojwXvi">
                             <fieldset class="module aligned">
