--- a/SGA/LOGIN/templates/historial_auditoria.html
+++ b/SGA/LOGIN/templates/historial_auditoria.html
@@ -43,6 +43,13 @@
     
     <!-- Header -->
     
+        <nav aria-label="Breadcrumbs">
+        <div class="breadcrumbs">
+            <a href="/LOGIN/home/">Home</a> &rsaquo;
+            <a href="">historial auditoria</a> &rsaquo;
+        </div>
+        </nav>
+
       <header id="header">
         <div id="branding">
         
