--- a/SGA/LOGIN/templates/LOGIN_SGA.html
+++ b/SGA/LOGIN/templates/LOGIN_SGA.html
@@ -55,7 +55,9 @@
                                 <input type="hidden" name="next" value="admin">
                             </div>
                             <div class="submit-row">
-                                <input type="submit" value="Entrar">
+                                <!--<input type="submit" value="Entrar">  PENDIENTE FRAMEWORKS  -->
+                                
+                                <a href="/LOGIN/home/">ENTRAR</a> 
                             </div>
                         </form>
                     </div>
