--- a/SGA/LOGIN/templates/agendar_auditoria.html
+++ b/SGA/LOGIN/templates/agendar_auditoria.html
@@ -32,6 +32,15 @@
     
 
 <meta name="robots" content="NONE,NOARCHIVE">
+
+<style>
+        .logo-small {
+          width: 50px; /* Cambia este valor según el tamaño deseado */
+          height: auto; /* Para mantener la proporción */
+          padding-right: 30px;
+        }
+</style>
+
 </head>
 
 <body class=" app-LOGIN model-agendaauditorias change-form"
@@ -46,7 +55,9 @@
       <header id="header">
         <div id="branding">
         
-<div id="site-name"><a href="/admin/">SISTEMA DE GESTION DE AUDITORIA</a></div>
+<div id="site-name">
+        <img src="/static/imagen/logosga.png" alt="Logo SGA" class="logo-small">
+        <a href="/admin/">SISTEMA DE GESTION DE AUDITORIA</a></div>
 
 
         </div>
