--- a/SGA/LOGIN/templates/home_auditor.html
+++ b/SGA/LOGIN/templates/home_auditor.html
@@ -30,16 +30,24 @@
 <script src="/static/admin/js/vendor/xregexp/xregexp.js"></script>
 <script src="/static/admin/js/filters.js" defer></script>
 
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/admin/css/responsive.css">
     
 
 <meta name="robots" content="NONE,NOARCHIVE">
+<style>
+  .logo-small {
+    width: 50px; /* Cambia este valor según el tamaño deseado */
+    height: auto; /* Para mantener la proporción */
+    padding-right: 30px;
+}
+</style>
+
 </head>
 
 <body class=" app-LOGIN model-users change-list"
   data-admin-utc-offset="0">
+
 <a href="#content-start" class="skip-to-content-link">Skip to main content</a>
 <!-- Container -->
 <div id="container">
@@ -50,7 +58,9 @@
       <header id="header">
         <div id="branding">
         
-<div id="site-name"><a href="/admin/">SISTEMA DE GESTION DE AUDITORIA</a></div>
+<div id="site-name">
+  <img src="/static/imagen/logosga.png" alt="Logo SGA" class="logo-small">
+  <a href="/admin/">SISTEMA DE GESTION DE AUDITORIA</a></div>
 
 
         </div>
