--- a/SGA/LOGIN/templates/crear_plantilla.html
+++ b/SGA/LOGIN/templates/crear_plantilla.html
@@ -24,6 +24,13 @@
     <script src="./vendor/prepopulate.js"></script>
     <script src="./vendor/xregexp/xregexp.js"></script>
     <meta name="robots" content="NONE,NOARCHIVE">
+    <style>
+        .logo-small {
+          width: 50px; /* Cambia este valor según el tamaño deseado */
+          height: auto; /* Para mantener la proporción */
+          padding-right: 30px;
+        }
+    </style>
 </head>
 <body class="app-LOGIN model-plantilla change-form" data-admin-utc-offset="0">
 <a href="#content-start" class="skip-to-content-link">Skip to main content</a>
@@ -32,7 +39,9 @@
     <!-- Header -->
     <header id="header">
         <div id="branding">
-            <div id="site-name"><a href="/admin/">SISTEMA DE GESTION DE AUDITORIA</a></div>
+            <div id="site-name">
+                <img src="/static/imagen/logosga.png" alt="Logo SGA" class="logo-small">
+                <a href="/admin/">SISTEMA DE GESTION DE AUDITORIA</a></div>
         </div>
         <div id="user-tools">
             Welcome,
