--- a/SGA/LOGIN/templates/crear_usuario.html
+++ b/SGA/LOGIN/templates/crear_usuario.html
@@ -57,6 +57,7 @@
                     </svg>
                 </button>
             </div>
+			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         </header>
         <!-- END Header -->
 
@@ -79,6 +80,25 @@
                         <div>
                             <div class="flex-container">
                                 <label class="required" for="id_owner">Auditor:</label>
+								<br>
+								<!-- DIV MALDITO XD-->
+								{% block content %}
+								<h1>Auditor:</h1>
+								<ul class="list-group">
+								{% for USER in USERS %}
+								<li class="list-group-item">{{ USER.full_name}}</li>
+								{% endfor %}
+								</ul>
+								{% endblock %}
+								
+								<!-- FIN DIV MALDITO XD
+								<div>
+									<ul class="list-group">
+										<li class="list-group-item">An item</li>
+									</ul>
+								</div>
+								-->								
+								<table class="table">						
                                 <div class="related-widget-wrapper" data-model-ref="users">
                                     <select name="owner" required id="id_owner">
                                         <option value="" selected>---------</option>
@@ -96,6 +116,7 @@
                             </div>
                         </div>
                     </div>
+					
                     <div id="content-main">
                         <h1>Crear Auditor</h1>
                         <form method="post" id="users_form" novalidate>
@@ -163,5 +184,6 @@
         <symbol viewBox="0 0 24 24" width="1rem" height="1rem" id="icon-sun"><path d="M0 0h24v24H0z" fill="currentColor"/><path d="M12 18a6 6 0 1 1 0-12 6 6 0 0 1 0 12zm0-2a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM11 1h2v3h-2V1zm0 19h2v3h-2v-3zM3.515 4.929l1.414-1.414L7.05 5.636 5.636 7.05 3.515 4.93zM16.95 18.364l1.414-1.414 2.121 2.121-1.414 1.414-2.121-2.121zm2.121-14.85l1.414 1.415-2.121 2.121-1.414-1.414 2.121-2.121zM5.636 16.95l1.414 1.414-2.121 2.121-1.414-1.414 2.121-2.121zM23 11v2h-3v-2h3zM4 11v2H1v-2h3z"/></symbol>
     </svg>
     <!-- END SVGs -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
