--- a/SGA/LOGIN/templates/crear_usuario.html
+++ b/SGA/LOGIN/templates/crear_usuario.html
@@ -57,10 +57,10 @@
                     </svg>
                 </button>
             </div>
-			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+			
         </header>
         <!-- END Header -->
-
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <!-- Breadcrumbs -->
         <nav aria-label="Breadcrumbs">
             <div class="breadcrumbs">
@@ -78,10 +78,11 @@
                     <h1>Ver Auditores</h1>
                     <div class="form-row field-owner">
                         <div>
-                            <div class="flex-container">
+                                <!-- DIV MALDITO XD
+                                <div class="flex-container">-->
                                 <label class="required" for="id_owner">Auditor:</label>
 								<br>
-								<!-- DIV MALDITO XD-->
+								
 								{% block content %}
 								<h1>Auditor:</h1>
 								<ul class="list-group">
@@ -90,14 +91,10 @@
 								{% endfor %}
 								</ul>
 								{% endblock %}
-								
-								<!-- FIN DIV MALDITO XD
-								<div>
-									<ul class="list-group">
-										<li class="list-group-item">An item</li>
-									</ul>
+										
+								<!-- FIN DIV MALDITO XD-->
 								</div>
-								-->								
+														
 								<table class="table">						
                                 <div class="related-widget-wrapper" data-model-ref="users">
                                     <select name="owner" required id="id_owner">
@@ -183,7 +180,9 @@
         <symbol viewBox="0 0 24 24" width="1rem" height="1rem" id="icon-moon"><path d="M0 0h24v24H0z" fill="currentColor"/><path d="M10 7a7 7 0 0 0 12 4.9v.1c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2h.1A6.979 6.979 0 0 0 10 7zm-6 5a8 8 0 0 0 15.062 3.762A9 9 0 0 1 8.238 4.938 7.999 7.999 0 0 0 4 12z"/></symbol>
         <symbol viewBox="0 0 24 24" width="1rem" height="1rem" id="icon-sun"><path d="M0 0h24v24H0z" fill="currentColor"/><path d="M12 18a6 6 0 1 1 0-12 6 6 0 0 1 0 12zm0-2a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM11 1h2v3h-2V1zm0 19h2v3h-2v-3zM3.515 4.929l1.414-1.414L7.05 5.636 5.636 7.05 3.515 4.93zM16.95 18.364l1.414-1.414 2.121 2.121-1.414 1.414-2.121-2.121zm2.121-14.85l1.414 1.415-2.121 2.121-1.414-1.414 2.121-2.121zM5.636 16.95l1.414 1.414-2.121 2.121-1.414-1.414 2.121-2.121zM23 11v2h-3v-2h3zM4 11v2H1v-2h3z"/></symbol>
     </svg>
-    <!-- END SVGs -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    END SVGs -->
+	
 </body>
 </html>
