Se corrige el div de las entidades crear usuarios por temas de estilos

--- a/SGA/LOGIN/templates/crear_usuario.html
+++ b/SGA/LOGIN/templates/crear_usuario.html
@@ -64,20 +64,10 @@
         <div id="user-tools">
             
                 Welcome,
-                <strong>jhonny</strong>.
-            
-            
+                <strong>USER</strong>.
+
                 
-                    <a href="/">View site</a> /
-                
-                
-                    
-            
-                
-                <form id="logout-form" method="post" action="/admin/logout/">
-                    <input type="hidden" name="csrfmiddlewaretoken" value="vuvq00xyEzN2gPYRADm06pQ0bW1JGElZfQh68qqw7wF9pkvEP4sD1nK43iF4rWQF">
-                    <button type="submit">Log out</button>
-                </form>
+                <a href="/LOGIN/">Cerrar Sesión</a>
                 
 <button class="theme-toggle">
   <div class="visually-hidden theme-label-when-auto">Toggle theme (current theme: auto)</div>
