--- a/SGA/LOGIN/templates/LOGIN_SGA.html
+++ b/SGA/LOGIN/templates/LOGIN_SGA.html
@@ -62,8 +62,8 @@
                 <!-- Content -->
                 <div id="content" class="colM">
                     <div id="content-main">
-                        <form action="admin/login/?next=/admin/" method="post" id="login-form">
-                            <input type="hidden" name="csrfmiddlewaretoken" value="EfSZTcTvXEHEs6SIMNiM95jrgO1VswHGWVmY4wS46JXicF0FLoctLXLF9I3sbA9H">
+                        <form method="post" id="login-form">
+                            {% csrf_token %}
                             <div class="form-row">
                                 <label for="id_username" class="required">Nombre de Usuario</label>
                                 <input type="text" name="username" autofocus autocapitalize="none" autocomplete="username" maxlength="150" required id="id_username">
@@ -71,14 +71,19 @@
                             <div class="form-row">
                                 <label for="id_password" class="required">Contraseña</label>
                                 <input type="password" name="password" autocomplete="current-password" required id="id_password">
-                                <input type="hidden" name="next" value="admin">
+                                <input type="hidden" name="next" value="/LOGIN/home/">
                             </div>
                             <div class="submit-row">
-                                <!--<input type="submit" value="Entrar">  PENDIENTE FRAMEWORKS  -->
-                                
-                                <a href="/LOGIN/home/">ENTRAR</a> 
+                                <button type="submit">ENTRAR</button>
                             </div>
                         </form>
+                        {% if messages %}
+                        <div class="messages">
+                            {% for message in messages %}
+                            <p class="{% if message.tags %} {{ message.tags }} {% endif %}">{{ message }}</p>
+                            {% endfor %}
+                        </div>
+                        {% endif %}
                     </div>
                     <br class="clear">
                 </div>
