--- a/SGA/LOGIN/templates/guardar_usuario.html
+++ b/SGA/LOGIN/templates/guardar_usuario.html
@@ -1,51 +1,113 @@
-<!-- crear_usuario.html -->
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <title>Crear Usuario</title>
+    <link rel="stylesheet" href="/static/admin/css/base.css">
+    <link rel="stylesheet" href="/static/admin/css/dark_mode.css">
+    <script src="/static/admin/js/theme.js" defer></script>
+    <link rel="stylesheet" href="/static/admin/css/nav_sidebar.css">
+    <script src="/static/admin/js/nav_sidebar.js" defer></script>
+    <link rel="stylesheet" href="/static/admin/css/forms.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/admin/css/responsive.css">
+    <meta name="robots" content="NONE,NOARCHIVE">
+    <style>
+        .logo-small {
+            width: 50px;
+            height: auto;
+            padding-right: 30px;
+        }
+    </style>
 </head>
-<body>
-    <h1> Ver Auditores:</h1>
-    <select name="owner" required id="id_usuario">
-        <option value="" selected>---------</option>
-        {% for usuario in USERS %}
-            <option value="{{ usuario.id }}">{{ usuario.full_name }}</option>
-        {% endfor %}
-    </select>
-
-    <h1>Crear Nuevo Usuario</h1>
-    <form method="post" action="{% url 'guardar_usuario' %}">
-        {% csrf_token %}
-        
-        <div>
-            <label for="id_usuario">Usuario:</label>
-            <input type="text" id="id_usuario" name="usuario" required><br><br>
+<body class="app-LOGIN model-users change-form" data-admin-utc-offset="0">
+    <a href="#content-start" class="skip-to-content-link">Skip to main content</a>
+    <div id="container">
+        <header id="header">
+            <div id="branding">
+                <div id="site-name">
+                    <img src="/static/imagen/logosga.png" alt="Logo SGA" class="logo-small">
+                    <a href="/admin/">SISTEMA DE GESTION DE AUDITORIA</a>
+                </div>
+            </div>
+            <div id="user-tools">
+                Welcome,
+                <strong>USER</strong>.
+                <a href="/LOGIN/">Cerrar Sesión</a>
+                <button class="theme-toggle">
+                    <div class="visually-hidden theme-label-when-auto">Toggle theme (current theme: auto)</div>
+                    <div class="visually-hidden theme-label-when-light">Toggle theme (current theme: light)</div>
+                    <div class="visually-hidden theme-label-when-dark">Toggle theme (current theme: dark)</div>
+                    <svg aria-hidden="true" class="theme-icon-when-auto">
+                        <use xlink:href="#icon-auto" />
+                    </svg>
+                    <svg aria-hidden="true" class="theme-icon-when-dark">
+                        <use xlink:href="#icon-moon" />
+                    </svg>
+                    <svg aria-hidden="true" class="theme-icon-when-light">
+                        <use xlink:href="#icon-sun" />
+                    </svg>
+                </button>
+            </div>
+        </header>
+        <nav aria-label="Breadcrumbs">
+            <div class="breadcrumbs">
+                <a href="/LOGIN/home/">Home</a>
+                &rsaquo; <a href="/LOGIN/">Login</a>
+                &rsaquo; <a href="/admin/LOGIN/users/">Users</a>
+                &rsaquo; Add users
+            </div>
+        </nav>
+        <div class="main" id="main">
+            <button class="sticky toggle-nav-sidebar" id="toggle-nav-sidebar" aria-label="Toggle navigation"></button>
+            <main id="content-start" class="content" tabindex="-1">
+                <div id="content" class="colM">
+                    <h1>AGREGAR AUDITORES/ADMIN</h1>
+                    <div id="content-main">
+                        <h1>Ver Auditores:</h1>
+                        <select name="owner" required id="id_usuario">
+                            <option value="" selected>---------</option>
+                            {% for usuario in USERS %}
+                                <option value="{{ usuario.id }}">{{ usuario.full_name }}</option>
+                            {% endfor %}
+                        </select>
+                        <h1>Crear Nuevo Usuario</h1>
+                        <form method="post" action="{% url 'guardar_usuario' %}">
+                            {% csrf_token %}
+                            <div>
+                                <label for="id_usuario">Usuario:</label>
+                                <input type="text" id="id_usuario" name="usuario" required><br><br>
+                            </div>
+                            <div>
+                                <label for="id_password">Contraseña:</label>
+                                <input type="password" id="id_password" name="password" required><br><br>
+                            </div>
+                            <div>
+                                <label for="id_full_name">Nombre Completo:</label>
+                                <input type="text" id="id_full_name" name="full_name" required><br><br>
+                            </div>
+                            <div>
+                                <label for="id_tipo_usuario">Tipo de Usuario:</label>
+                                <input type="text" id="id_tipo_usuario" name="tipo_usuario" required><br><br>
+                            </div>
+                            <div>
+                                <label for="id_estado">Estado:</label>
+                                <input type="text" id="id_estado" name="estado" required><br><br>
+                            </div>
+                            <div>
+                                <input type="submit" value="Guardar Usuario" class="default" name="_save">
+                            </div>
+                        </form>
+                    </div>
+                    <br class="clear">
+                </div>
+            </main>
         </div>
-
-        <div>
-            <label for="id_password">Contraseña:</label>
-            <input type="password" id="id_password" name="password" required><br><br>
-        </div>
-
-        <div>
-            <label for="id_full_name">Nombre Completo:</label>
-            <input type="text" id="id_full_name" name="full_name" required><br><br>
-        </div>
-
-        <div>
-            <label for="id_tipo_usuario">Tipo de Usuario:</label>
-            <input type="text" id="id_tipo_usuario" name="tipo_usuario" required><br><br>
-        </div>
-
-        <div>
-            <label for="id_estado">Estado:</label>
-            <input type="text" id="id_estado" name="estado" required><br><br>
-        </div>
-
-        <div>
-            <input type="submit" value="Guardar Usuario" class="default" name="_save">
-        </div>
-    </form>
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" class="base-svgs">
+        <symbol viewBox="0 0 24 24" width="1rem" height="1rem" id="icon-auto"><path d="M0 0h24v24H0z" fill="currentColor"/><path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2V4a8 8 0 1 0 0 16z"/></symbol>
+        <symbol viewBox="0 0 24 24" width="1rem" height="1rem" id="icon-moon"><path d="M0 0h24v24H0z" fill="currentColor"/><path d="M10 7a7 7 0 0 0 12 4.9v.1c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2h.1A6.979 6.979 0 0 0 10 7zm-6 5a8 8 0 0 0 15.062 3.762A9 9 0 0 1 8.238 4.938 7.999 7.999 0 0 0 4 12z"/></symbol>
+        <symbol viewBox="0 0 24 24" width="1rem" height="1rem" id="icon-sun"><path d="M0 0h24v24H0z" fill="currentColor"/><path d="M12 18a6 6 0 1 1 0-12 6 6 0 0 1 0 12zm0-2a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM11 1h2v3h-2V1zm0 19h2v3h-2v-3zM3.515 4.929l1.414-1.414L7.05 5.636 5.636 7.05 3.515 4.93zM16.95 18.364l1.414-1.414 2.121 2.121-1.414 1.414-2.121-2.121zm2.121-14.85l1.414 1.415-2.121 2.121-1.414-1.414 2.121-2.121zM5.636 16.95l1.414 1.414-2.121 2.121-1.414-1.414 2.121-2.121zM23 11v2h-3v-2h3zM4 11v2H1v-2h3z"/></symbol>
+    </svg>
 </body>
 </html>
