--- a/SGA/LOGIN/templates/guardar_usuario.html
+++ b/SGA/LOGIN/templates/guardar_usuario.html
@@ -13,6 +13,55 @@
     <link rel="stylesheet" href="/static/admin/css/responsive.css">
     <meta name="robots" content="NONE,NOARCHIVE">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
+    <script>
+        function actualizar_campos_form() {
+            console.log('Entra al metodo actualizar_campos_form')
+            var selectElement = document.getElementById("id_usuario_cb").value;
+            console.log('OBTIENE CAMPO SELECCIONADO',selectElement)
+            var selectedUserId = selectElement.value; // Obtener el ID del usuario seleccionado
+            
+            // Obtener los datos del usuario seleccionado (puedes hacer una llamada AJAX aquí)
+            var usuarioSeleccionado = obtenerDatosUsuario(selectedUserId);
+            
+            // Verificar en la consola si se está obteniendo el usuario correctamente
+            console.log('Usuario seleccionado:', usuarioSeleccionado);
+            
+            // Actualizar los campos del formulario con los datos del usuario seleccionado
+            document.getElementById("id_usuario").value = usuarioSeleccionado.usuario;
+            document.getElementById("id_password").value = usuarioSeleccionado.password;
+            document.getElementById("id_full_name").value = usuarioSeleccionado.full_name;
+            document.getElementById("id_tipo_usuario").value = usuarioSeleccionado.tipo_usuario;
+            document.getElementById("id_estado").value = usuarioSeleccionado.estado;
+        }
+
+        
+        function obtenerDatosUsuario(usuarioId) {
+        // Convertir la cadena JSON de usuarios en un objeto JavaScript
+        var USERS = JSON.parse('{{ USERS_JSON | escapejs }}');
+
+        // Encontrar el usuario por ID
+        var usuarioEncontrado = USERS.find(function(usuario) {
+            return usuario.id == usuarioId;
+        });
+
+        return usuarioEncontrado;
+        }
+
+    </script>
+    
+    <script>
+        function limpiar_campos_form() {
+            
+            document.getElementById("id_usuario").value = "";
+            document.getElementById("id_password").value = "";
+            document.getElementById("id_full_name").value = "";
+            document.getElementById("id_tipo_usuario").value = "";
+            document.getElementById("id_estado").value = "";
+        }
+    </script>
+    
+    
     <style>
         .logo-small {
             width: 50px;
@@ -89,13 +138,13 @@
                         <form method="post" action="{% url 'guardar_usuario' %}">
                             {% csrf_token %}
                             <div>
-                                <select name="usuario_cb" required id="id_usuario">
+                                <select name="usuario_cb" required id="id_usuario_cb">
                                     <option value="" selected>---------</option>
                                     {% for usuario in USERS %}
                                         <option value="{{ usuario.id_usuario }}">{{ usuario.full_name }}</option>
                                     {% endfor %}
                                 </select>
-                                <input type="submit" value="✎ Editar" class="default" name="_get">
+                                <input type="button" value="✎ Editar" class="default" name="_xxx" onclick="actualizar_campos_form()">
                                 <input type="submit" value="✘ Eliminar" class="default" name="_delete">
                             </div>
                         </form>
