--- a/SGA/LOGIN/templates/home_auditor.html
+++ b/SGA/LOGIN/templates/home_auditor.html
@@ -186,7 +186,7 @@
         
           <tr class="model-users current-model">
             
-              <th scope="row"><a href="/LOGIN/crear_usuario/" aria-current="page">CREAR USUARIO</a></th>
+              <th scope="row"><a href="/LOGIN/guardar_usuario/" aria-current="page">CREAR USUARIO</a></th>
             
 
             
