Se termina CREAR,ELIMINAR de PLANTILLA

--- a/SGA/LOGIN/templates/crear_plantilla.html
+++ b/SGA/LOGIN/templates/crear_plantilla.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CREAR PLANTILLA</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'admin/css/base.css' %}">
-    <link rel="stylesheet" href="{% static 'admin/css/dark_mode.css' %}">
-    <link rel="stylesheet" href="{% static 'admin/css/nav_sidebar.css' %}">
-    <link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">
-    <link rel="stylesheet" href="{% static 'admin/css/responsive.css' %}">
+    <link rel="stylesheet" href="/static/admin/css/base.css">
+    <link rel="stylesheet" href="/static/admin/css/dark_mode.css">
+    <script src="/static/admin/js/theme.js" defer></script>
+    <link rel="stylesheet" href="/static/admin/css/nav_sidebar.css">
+    <script src="/static/admin/js/nav_sidebar.js" defer></script>
+    <link rel="stylesheet" href="/static/admin/css/forms.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/admin/css/responsive.css">
+    <script src="/static/admin/js/admin/DateTimeShortcuts.js"></script>
+    
     <script src="./js/vendor/theme.js" defer></script>
     <script src="./vendor/nav_sidebar.js" defer></script>
     <script src="/admin/jsi18n/"></script>
@@ -24,6 +28,7 @@
     <script src="./vendor/prepopulate.js"></script>
     <script src="./vendor/xregexp/xregexp.js"></script>
     <meta name="robots" content="NONE,NOARCHIVE">
+
     <style>
         .logo-small {
           width: 50px; /* Cambia este valor según el tamaño deseado */
@@ -79,10 +84,28 @@
          <main id="content-start" class="content" tabindex="-1">
             <!-- Content -->
             <div id="content" class="colM">
+
+                <h1>Ver PLANTILAS:</h1>
+                        <form method="post" action="{% url 'CREAR_PLANTILLA' %}">
+                            {% csrf_token %}
+                            <div>
+                                <select name="Plantilla_cb" required id="id_plantilla_cb">
+                                    <option value="" selected>---------</option>
+                                    {% for plantilla in Plantilla %}
+                                        <option value="{{ plantilla.id_plantilla }}">{{ plantilla.nombre_plantilla }}</option>
+                                    {% endfor %}
+                                </select>
+                                <!--
+                                <input type="button" value="✎ Editar" class="default" name="_xxx" onclick="actualizar_campos_form()">
+                                -->
+                                <input type="submit" value="✘ Eliminar" class="default" name="_delete_plan">
+                            </div>
+                        </form>
+
                 <h1>CREAR PLANTILLA</h1>
                 <div id="content-main">
-                    <form method="post" id="plantilla_form" novalidate>
-                        <input type="hidden" name="csrfmiddlewaretoken" value="iuJXMFx3kAvsE1jefFwCjmGBodfonr6uUwiCnzTeRSsYw1HLA4Y0MoFuYb8qHKWz">
+                    <form method="post" action="{% url 'CREAR_PLANTILLA' %}">
+                        {% csrf_token %}                        
                         <div>
                             <fieldset class="module aligned ">
                                 <div class="form-row field-nombre_plantilla">
@@ -106,18 +129,12 @@
                                         <div class="flex-container">
                                             <label class="required" for="id_owner">Auditor:</label>
                                             <div class="related-widget-wrapper" data-model-ref="users">
-                                                <select name="owner" required id="id_owner">
+                                                <select name="usuario_cb" required id="id_usuario_cb">
                                                     <option value="" selected>---------</option>
-                                                </select>
-                                                <a class="related-widget-wrapper-link change-related" id="change_id_owner"
-                                                   data-href-template="/admin/LOGIN/users/__fk__/change/?_to_field=id_usuario&amp;_popup=1"
-                                                   data-popup="yes" title="Change selected users"><img src="/static/admin/img/icon-changelink.svg" alt="" width="20" height="20"></a>
-                                                <a class="related-widget-wrapper-link add-related" id="add_id_owner"
-                                                   data-popup="yes" href="/admin/LOGIN/users/add/?_to_field=id_usuario&amp;_popup=1"
-                                                   title="Add another users"><img src="/static/admin/img/icon-addlink.svg" alt="" width="20" height="20"></a>
-                                                <a class="related-widget-wrapper-link view-related" id="view_id_owner"
-                                                   data-href-template="/admin/LOGIN/users/__fk__/change/?_to_field=id_usuario"
-                                                   title="View selected users"><img src="/static/admin/img/icon-viewlink.svg" alt="" width="20" height="20"></a>
+                                                    {% for usuario in USERS %}
+                                                        <option value="{{ usuario.id_usuario }}">{{ usuario.full_name }}</option>
+                                                    {% endfor %}
+                                                </select>                                                
                                             </div>
                                         </div>
                                     </div>
@@ -135,109 +152,19 @@
                                         <div class="flex-container">
                                             <label class="required">Fecha creacion</label>
                                             <p class="datetime">
-                                                Date: <input type="text" name="created_date_0" class="vDateField" size="10" required id="id_created_date_0">
-                                                <br>
-                                                Time: <input type="text" name="created_date_1" class="vTimeField" size="8" required id="id_created_date_1">
-                                            </p><div><label >Formato: YYYY-MM-DD</label>
-											<label >Formato: HH24:MI:SS</label></div>												
+                                                <input type="datetime-local" name="created_date" required id="id_created_date">
+                                            </p>
+                                            <div>
+                                                <label>Formato: YYYY-MM-DDTHH:MM</label>
+                                            </div>
                                         </div>
+                                        
                                     </div>
                                 </div>
                             </fieldset>
                             <div class="submit-row">
-                                <input type="submit" value="GUARDAR" class="default" name="_save">
-                                <input type="submit" value="GUARDAR Y AGREGAR OTRO" name="_addanother">
-                                <input type="submit" value="GUARDAR Y CONTINUAR EDITANDO" name="_continue">
+                                <input type="submit" value="GUARDAR" class="default" name="_save_plan">
                             </div>
-							
-							
-
-
-
-
-
-							
-							<h1>FORMULARIO DE LA PLANTILLA</h1>
-							<!-- Formulario para agregar actividad -->
-							<fieldset class="module aligned">
-								<div class="form-row field-plantilla">
-									<!-- Contenido del formulario -->
-								</div>
-								<div class="form-row field-actividad">
-									<!-- Contenido del formulario -->
-								</div>
-							</fieldset>
-							<!-- Fin del formulario de actividad -->
-								<!-- Formulario para agregar actividad -->
-                            <fieldset class="module aligned ">
-                                <div class="form-row field-plantilla">
-                                    <div>
-                                        <div class="flex-container">
-                                            <label class="required" for="id_plantilla">Plantilla:</label>
-                                            <div class="related-widget-wrapper" data-model-ref="plantilla">
-                                                <select name="plantilla" required id="id_plantilla">
-                                                    <option value="" selected>---------</option>
-                                                </select>
-                                                <a class="related-widget-wrapper-link change-related" id="change_id_plantilla"
-                                                   data-href-template="/admin/LOGIN/plantilla/__fk__/change/?_to_field=id_plantilla&amp;_popup=1"
-                                                   data-popup="yes" title="Change selected plantilla"><img src="/static/admin/img/icon-changelink.svg" alt="" width="20" height="20"></a>
-                                                <a class="related-widget-wrapper-link add-related" id="add_id_plantilla"
-                                                   data-popup="yes" href="/admin/LOGIN/plantilla/add/?_to_field=id_plantilla&amp;_popup=1"
-                                                   title="Add another plantilla"><img src="/static/admin/img/icon-addlink.svg" alt="" width="20" height="20"></a>
-                                                <a class="related-widget-wrapper-link view-related" id="view_id_plantilla"
-                                                   data-href-template="/admin/LOGIN/plantilla/__fk__/change/?_to_field=id_plantilla"
-                                                   title="View selected plantilla"><img src="/static/admin/img/icon-viewlink.svg" alt="" width="20" height="20"></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-row field-actividad">
-                                    <div>
-                                        <div class="flex-container">
-                                            <label class="required" for="id_actividad">Actividad:</label>
-                                            <input type="text" name="actividad" class="vTextField" maxlength="1200" required id="id_actividad">
-                                        </div>
-                                    </div>
-                                </div>
-                            </fieldset>
-                            <!--Fin del formulario de actividad -->
-							<!-- Lista de actividades -->
-							<div id="actividades-lista">
-								<h2>Lista de Actividades</h2>
-								<ul id="lista-actividades">
-									<!-- Aquí se añadirán dinámicamente las actividades -->
-								</ul>
-							</div>
-							<!-- Fin de la lista de actividades -->
-
-							<!-- Tabla de actividades -->
-							<table id="tabla-actividades">
-								<thead>
-									<tr>
-										<th>fk_id_plantilla</th>
-										<th>Actividad</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>1</td>
-										<td>REVISAR DOCUMENTO DE CAJA CHICA</td>
-									</tr>
-								</tbody>
-							</table>
-							<!-- Fin de la tabla de actividades -->
-
-							<!-- Botones de guardado -->
-							<div class="submit-row">
-								<input type="submit" value="GUARDAR" class="default" name="_save">
-								<input type="submit" value="GUARDAR Y AGREGAR OTRO" name="_addanother">
-								<input type="submit" value="GUARDAR Y CONTINUAR EDITANDO" name="_continue">
-							</div>
-
-
-
-
-							
 							
                             <script id="django-admin-form-add-constants" src="./change_form.js" data-model-name="plantilla" async></script>
                             <script id="django-admin-prepopulated-fields-constants" src="./prepopulate_init.js" data-prepopulated-fields="[]"></script>
