Se termina CREAR,ELIMINAR de de las ACTIVIDADES DEL FORMULARIO

--- a/SGA/LOGIN/templates/home_auditor.html
+++ b/SGA/LOGIN/templates/home_auditor.html
@@ -183,6 +183,15 @@
 
             
           </tr>
+
+
+          <tr class="model-formulario">
+            
+              
+            <th scope="row"><a href="/LOGIN/formulario_actividades/">EDITAR FOMRULARIO</a></th>
+    
+                
+              </tr>
         
           <tr class="model-users current-model">
             
